--- a/packages/scss/src/atoms/Button.scss
+++ b/packages/scss/src/atoms/Button.scss
@@ -2,4 +2,10 @@
 
 .dse-button-container {
   display: flex;
+
+
+  background: $btn-primary-bg;
+  color: $btn-primary-color;
+  border: none;
+  padding: map-get($spacing, 'xxxs' );
 }
