--- a/packages/scss/src/foundation/_variables.scss
+++ b/packages/scss/src/foundation/_variables.scss
@@ -84,6 +84,14 @@ $fs-md: 1rem; // 16px
 $fs-lg: 1.125rem; // 18px
 $fs-xl: 1.5rem; // 24px
 
+$font-sizes: (
+  xs: 0.75rem,// 12px
+  sm: 0.875rem,// 0.875rem
+  md: 1rem,// 16px
+  lg: 1.125rem,// 18px
+  xl: 1.5rem,// 24px
+) !default;
+
 /* --------------------------- Heading font sizes --------------------------- */
 
 $h-1: 1.375rem; // 22px
