feat: :sparkles: margin component created

--- a/packages/scss/src/foundation/_variables.scss
+++ b/packages/scss/src/foundation/_variables.scss
@@ -133,6 +133,8 @@ $breakpoints: (
 /* -------------------------------------------------------------------------- */
 
 $spacing: (
+  none: 0rem,
+  // 0px
   xxxs: 0.25rem,
   // 4px
   xxs: 0.5rem,
