--- a/packages/scss/src/foundation/_variables.scss
+++ b/packages/scss/src/foundation/_variables.scss
@@ -157,3 +157,7 @@ $spacing: (
 
 $elevation: 0 0 2px rgba(0, 0, 0, 0.14), 0 2px 2px rgba(0, 0, 0, 0.12),
   0 1px 3px rgba(0, 0, 0, 0.2);
+
+$shadows: (
+  base: 0px 4px 11px rgba(157, 157, 157, 0.21),
+)
