feat: :wheelchair: improving acessibility in select component

--- a/packages/scss/src/molecules/Select.scss
+++ b/packages/scss/src/molecules/Select.scss
@@ -58,7 +58,7 @@
 
         @include padding('xs');
 
-        &:hover {
+        &--hightlighted {
             background-color: $form-bg-color-hover;
         }
 
